--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@twa-dev/sdk": "^7.10.1",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "eruda": "^3.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
